handle return value of commands (AND JAVA 17 PREVIEW FOR PATTERN MATCHING)